--- a/package.json
+++ b/package.json
@@ -47,6 +47,15 @@
             }
         }
     },
+    "keywords": [
+        "Pomodoro",
+        "Timer",
+        "Task"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/lkytal/pomodoro.git"
+    },
     "scripts": {
         "vscode:prepublish": "tsc -p ./",
         "compile": "tsc -watch -p ./",
