--- a/package.json
+++ b/package.json
@@ -1,72 +1,73 @@
 {
-    "name": "pomodoro",
-    "displayName": "Pomodoro Timer",
-    "description": "Pomodoro Timer for vscode",
-    "version": "1.0.1",
-    "publisher": "lkytal",
-    "engines": {
-        "vscode": "^1.1.0"
-    },
-    "categories": [
-        "Other"
+  "name": "pomodoro",
+  "displayName": "Pomodoro Timer",
+  "description": "Pomodoro Timer for vscode",
+  "version": "1.0.2",
+  "publisher": "lkytal",
+  "license": "BY-NC-SA",
+  "engines": {
+    "vscode": "^1.1.0"
+  },
+  "categories": [
+    "Other"
+  ],
+  "activationEvents": [
+    "*"
+  ],
+  "main": "./out/src/extension",
+  "icon": "icon.png",
+  "contributes": {
+    "commands": [
+      {
+        "command": "extension.startPomodoro",
+        "title": "Start Pomodoro"
+      },
+      {
+        "command": "extension.pausePomodoro",
+        "title": "Pause Pomodoro"
+      },
+      {
+        "command": "extension.resetPomodoro",
+        "title": "Reset Pomodoro"
+      }
     ],
-    "activationEvents": [
-        "*"
-    ],
-    "main": "./out/src/extension",
-    "icon": "icon.png",
-    "contributes": {
-        "commands": [
-            {
-                "command": "extension.startPomodoro",
-                "title": "Start Pomodoro"
-            },
-            {
-                "command": "extension.pausePomodoro",
-                "title": "Pause Pomodoro"
-            },
-            {
-                "command": "extension.resetPomodoro",
-                "title": "Reset Pomodoro"
-            }
-        ],
-        "configuration": {
-            "type": "object",
-            "title": "Pomodoro Configuration",
-            "properties": {
-                "pomodoro.workTime": {
-                    "type": "number",
-                    "default": 25,
-                    "description": "Time of work, in minutes."
-                },
-                "pomodoro.pauseTime": {
-                    "type": "number",
-                    "default": 5,
-                    "description": "Time of pause, in minutes"
-                }
-            }
+    "configuration": {
+      "type": "object",
+      "title": "Pomodoro Configuration",
+      "properties": {
+        "pomodoro.workTime": {
+          "type": "number",
+          "default": 25,
+          "description": "Time of work, in minutes."
+        },
+        "pomodoro.pauseTime": {
+          "type": "number",
+          "default": 5,
+          "description": "Time of pause, in minutes"
         }
-    },
-    "keywords": [
-        "Pomodoro",
-        "Timer",
-        "Task"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/lkytal/pomodoro.git"
-    },
-    "scripts": {
-        "vscode:prepublish": "tsc -p ./",
-        "compile": "tsc -watch -p ./",
-        "postinstall": "node ./node_modules/vscode/bin/install",
-        "test": "node ./node_modules/vscode/bin/test"
-    },
-    "devDependencies": {
-        "typescript": "^2.2.1",
-        "vscode": "^1.1.0",
-        "mocha": "^3.2.0",
-        "@types/node": "^7.0.8",
-        "@types/mocha": "^2.2.40"
+      }
     }
+  },
+  "keywords": [
+    "Pomodoro",
+    "Timer",
+    "Task"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lkytal/pomodoro.git"
+  },
+  "scripts": {
+    "vscode:prepublish": "tsc -p ./",
+    "compile": "tsc -watch -p ./",
+    "postinstall": "node ./node_modules/vscode/bin/install",
+    "test": "node ./node_modules/vscode/bin/test"
+  },
+  "devDependencies": {
+    "@types/mocha": "^2.2.40",
+    "@types/node": "^7.0.10",
+    "mocha": "^3.2.0",
+    "typescript": "^2.2.1",
+    "vscode": "^1.1.0"
+  }
 }
