--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,22 @@
 {
-    "compilerOptions": {
-        "module": "commonjs",
-        "target": "es6",
-        "outDir": "out",
-        "lib": [
-            "es6"
-        ],
-        "sourceMap": true,
-        "rootDir": "."
-    },
-    "exclude": [
-        "node_modules",
-        ".vscode-test"
-    ]
+	"compilerOptions": {
+		"target": "es2015",
+		"module": "commonjs",
+		//"allowJs": true,
+		//"checkJs": true,
+		"rootDir": ".",
+		"outDir": "out",
+		"lib": [
+			"es5",
+			"es6",
+			"es2015",
+			"es2016",
+			"es2017"
+		],
+		"sourceMap": true
+	},
+	"exclude": [
+		"node_modules",
+		".vscode-test"
+	]
 }
