--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
 	"name": "pomodoro",
 	"displayName": "Pomodoro Timer",
 	"description": "Pomodoro Timer for vscode",
-	"version": "1.1.2",
+	"version": "1.1.3",
 	"publisher": "lkytal",
 	"license": "BY-NC-SA",
 	"engines": {
-		"vscode": "^1.1.0"
+		"vscode": "^1.60.0"
 	},
 	"categories": [
 		"Other"
 	],
 	"activationEvents": [
-		"*"
+		"onStartupFinished"
 	],
 	"main": "./out/src/extension",
 	"icon": "icon.png",
@@ -69,10 +69,10 @@
 		"test": "node ./node_modules/vscode/bin/test"
 	},
 	"devDependencies": {
-		"@types/mocha": "^5.2.7",
-		"@types/node": "^12.7.3",
-		"mocha": "^6.2.0",
-		"typescript": "^3.6.2",
-		"vscode": "^1.1.36"
+		"@types/mocha": "^10.0.10",
+		"@types/node": "^22.15.19",
+		"mocha": "^11.3.0",
+		"typescript": "^5.8.3",
+		"vscode": "^1.1.37"
 	}
 }
