--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
 	"name": "pomodoro",
 	"displayName": "Pomodoro Timer",
 	"description": "Pomodoro Timer for vscode",
-	"version": "2.0.1",
+	"version": "2.1.0",
 	"publisher": "lkytal",
 	"license": "BY-NC-SA",
 	"engines": {
-		"vscode": "^1.60.0"
+		"vscode": "^1.80.0"
 	},
 	"categories": [
 		"Other"
@@ -49,6 +49,16 @@
 					"type": "number",
 					"default": 4,
 					"description": "Number of repeat before long break"
+				},
+				"pomodoro.playSound": {
+					"type": "boolean",
+					"default": true,
+					"description": "Play sound when timer ends"
+				},
+				"pomodoro.showNotification": {
+					"type": "boolean",
+					"default": true,
+					"description": "Show notification when timer ends"
 				}
 			}
 		}
@@ -65,14 +75,15 @@
 	"scripts": {
 		"vscode:prepublish": "tsc -p ./",
 		"compile": "tsc -watch -p ./",
-		"postinstall": "node ./node_modules/vscode/bin/install",
-		"test": "node ./node_modules/vscode/bin/test"
+		"test": "node ./node_modules/@vscode/test-electron/out/runTest.js"
 	},
 	"devDependencies": {
 		"@types/mocha": "^10.0.10",
 		"@types/node": "^22.15.19",
+		"@types/vscode": "^1.80.0",
 		"mocha": "^11.3.0",
 		"typescript": "^5.8.3",
-		"vscode": "^1.1.37"
+		"@vscode/test-electron": "^2.4.0",
+		"play-sound": "^1.1.6"
 	}
 }
